Remove node associated to an alias on node stash (#727)
* Remove node and his children nodes associated to an alias on node stash/delete

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>